[gd_scene load_steps=5 format=3 uid="uid://cjc2sjlxsx01m"]

[ext_resource type="Theme" uid="uid://nugk8q3qw3sn" path="res://resources/themes/theme.tres" id="1_dbk64"]
[ext_resource type="Script" uid="uid://dneldr207xagd" path="res://ui/start_menu/start_menu.gd" id="2_qpy53"]

[sub_resource type="LabelSettings" id="LabelSettings_nhkli"]
font_size = 80
font_color = Color(0.68359375, 0.04005432, 0.04005432, 1)
outline_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_dbk64"]
font_size = 30
font_color = Color(0.68359375, 0.04005432, 0.04005432, 1)
outline_size = 8

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dbk64")
script = ExtResource("2_qpy53")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 48

[node name="VBoxContainer" type="VBoxContainer" parent="Content"]
layout_mode = 2

[node name="Title" type="Label" parent="Content/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Title"
label_settings = SubResource("LabelSettings_nhkli")

[node name="Title_zh" type="Label" parent="Content/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "凌迟厂"
label_settings = SubResource("LabelSettings_dbk64")

[node name="ButtonRows" type="VBoxContainer" parent="Content"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PlayButton" type="Button" parent="Content/ButtonRows"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "WakeUp"
flat = true

[node name="SettingsButton" type="Button" parent="Content/ButtonRows"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Settings"
flat = true

[node name="CreditsButton" type="Button" parent="Content/ButtonRows"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Credits"
flat = true
